# AgentOS

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  settings.py
agents/: knowledge_agent.py  mcp_agent.py  pal.py  slack_agent.py
agents/orchestrator/: neo.py
app/: config.yaml  main.py
app/api/: routes.py
models/: openrouter.py
scripts/: composio_email_test.py  composio_team_smoke_test.py  entrypoint.sh
src/: README.md
src/agents/: __init__.py  agno_assist.py  communication_agent.py  content_agent.py  knowledge_agent.py  mcp_agent.py  plane_agent.py  project_manager.py  pulse_agent.py  research_agent.py  slack_agent.py  tools_agent.py
src/config/: settings.py
src/integrations/: __init__.py
src/integrations/composio/: __init__.py  client.py  email.py  generic.py
src/models/: __init__.py  openrouter.py
src/prompts/: __init__.py  agno_assist.md  communication_agent.md  composio_agent.md  deep_researcher.md  dev_implementer.md  dev_lead.md  dev_reviewer.md  exec_content_agent.md  knowledge_agent.md  mcp_agent.md  neo_agent.md  plane_agent.md  project_manager.md  pulse_dispatcher.md  research_agent.md  research_analyst.md  research_lead.md  slack_agent.md  tools_agent.md  workspace_channel_agent.md
src/runtime/: __init__.py  bootstrap.py
src/schedules/: __init__.py  pulse_schedule.py
src/teams/: __init__.py  dev_team.py  neo_orchestrator.py  neo_team.py  research_team.py  shared.py
src/tools/: __init__.py  composio_tools.py  mcp_tools.py  slack_tools.py
src/workflows/: __init__.py  route_slack_message.py
(+9 files in other folders)
